
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package GOV_GUARD;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/makerdao/smart-contracts/GOV_GUARD";

message LogDeny {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
}

message LogRely {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
}

message LogSetRoot {
	google.protobuf.Timestamp ts = 1;
	bytes NewRoot = 2;		//	address
}
